Stubs refactored